# ic-testkit

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  POCKET-IC.md  README.md
canisters/: README.md
canisters/test/perf_probe/: Cargo.toml
canisters/test/perf_probe/src/: lib.rs
crates/ic-testkit/: Cargo.toml  README.md
crates/ic-testkit/src/: lib.rs
crates/ic-testkit/src/artifacts/: wasm.rs
crates/ic-testkit/src/benchmark/: mod.rs
crates/ic-testkit/src/pic/: calls.rs  diagnostics.rs  errors.rs  lifecycle.rs  mod.rs  runtime.rs  snapshot.rs  standalone.rs  startup.rs
crates/ic-testkit/tests/: benchmark.rs  canister_benchmark.rs
docs/design/0.1-benchmarking/: 0.1-design.md
scripts/dev/: cloc.sh
src/: lib.rs  performance.rs
src/artifacts/: icp.rs  mod.rs  wasm.rs  workspace.rs
src/benchmark/: mod.rs
src/pic/: baseline.rs  calls.rs  lifecycle.rs  mod.rs  process_lock.rs  standalone.rs
tests/: artifact_helpers.rs  benchmark.rs  canister_benchmark.rs
