[package]
name = "ic-testkit"
edition = "2024"
rust-version = "1.88.0"
version = "0.0.2"
license = "MIT"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "PocketIC-oriented test utilities for IC canister tests"
readme = "README.md"
repository = "https://github.com/dragginzgame/ic-testkit"
keywords = ["internet-computer", "canister", "dfinity", "icp", "testing"]
categories = ["development-tools::testing", "wasm"]

[dependencies]
candid = { version = "0.10", default-features = false }
pocket-ic = "13.0"
serde = { version = "1.0", default-features = false }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"
doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
struct_field_names = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"
