[workspace]
members = ["crates/ic-testkit", "canisters/test/perf_probe"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
version = "0.1.9"
license = "MIT"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "PocketIC-oriented test utilities for IC canister tests"
repository = "https://github.com/dragginzgame/ic-testkit"
homepage = "https://github.com/dragginzgame/ic-testkit"
keywords = ["internet-computer", "canister", "dfinity", "icp", "testing"]
categories = ["development-tools::testing", "wasm"]
readme = "README.md"

[workspace.dependencies]
candid = { version = "0.10", default-features = false }
flate2 = "1.1"
ic-cdk = "0.20.1"
ic-testkit = { path = "crates/ic-testkit" }
pocket-ic = "14.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
sha2 = "0.10"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"
doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
struct_field_names = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"
